--- a/blogs.html
+++ b/blogs.html
@@ -70,7 +70,9 @@
         <div class="row">
           <div class="hidden-sm col-md-2 asidebanner"><img src="assets/image/banner_left.jpg"/>
           </div>
-          <div class="col-md-12"><img src="assets/image/banner-header.jpg"/>
+          <div class="col-md-12">
+            <div id="htmlnav" class="list-group list-group-horizontal"><a href="home.html" class="list-group-item">HOME</a><a href="blogs.html" class="list-group-item">BLOGS</a><a href="columnistas.html" class="list-group-item">COLUMNISTAS</a><a href="contacto.html" class="list-group-item">CONTACTO</a>
+            </div><img src="assets/image/banner-header.jpg"/>
             <section id="blogs">
               <h1>Blogs</h1>
               <h3>LO ÚLTIMO EN BLOGS<i class="fa fa-angle-double-down"></i></h3>
