--- a/home.html
+++ b/home.html
@@ -70,7 +70,9 @@
         <div class="row">
           <div class="hidden-sm col-md-2 asidebanner"><img src="assets/image/banner_left.jpg"/>
           </div>
-          <div class="col-md-12"><img src="assets/image/banner-header.jpg"/>
+          <div class="col-md-12">
+            <div id="htmlnav" class="list-group list-group-horizontal"><a href="home.html" class="list-group-item">HOME</a><a href="blogs.html" class="list-group-item">BLOGS</a><a href="columnistas.html" class="list-group-item">COLUMNISTAS</a><a href="contacto.html" class="list-group-item">CONTACTO</a>
+            </div><img src="assets/image/banner-header.jpg"/>
             <h1 class="text-center">GUERRA EN LA MUNICIPALIDAD DE LIMA METROPOLITANA</h1>
             <ul class="social-list list-unstyled">
               <li class="list-inline"><a href="#" class="social-box fa fa-facebook"></a></li>
